--- a/media-player.css
+++ b/media-player.css
@@ -6,8 +6,14 @@
 .search-bar{
 	padding-bottom: 0;
 }
+md-toolbar{
+	box-shadow: 0px 2px 2px -2px rgba(0, 0, 0, 0.52);
+}
 .search-bar input{
 	line-height:2em;
+}
+.search-result-content{
+	padding-left:1em;
 }
 
 
@@ -32,23 +38,23 @@ md-item:focus *{
 }
 
 .slide-down-if {
-  height:12em;
+  max-height:12em;
   overflow-x: hidden;
   overflow-y: auto; 
   border: 1px solid rgba(0, 0, 0, 0.12);
 }
 
 .slide-down-if.ng-enter, .slide-down-if.ng-leave {
-  -webkit-transition:height cubic-bezier(0.250, 0.460, 0.450, 0.940) 110ms;
-  transition:height cubic-bezier(0.250, 0.460, 0.450, 0.940) 110ms;
+  -webkit-transition:max-height cubic-bezier(0.250, 0.460, 0.450, 0.940) 110ms;
+  transition:max-height cubic-bezier(0.250, 0.460, 0.450, 0.940) 110ms;
 }
 
 .slide-down-if.ng-enter,
 .slide-down-if.ng-leave.ng-leave-active {
-  height:0;
+  max-height:0;
 }
 
 .slide-down-if.ng-leave,
 .slide-down-if.ng-enter.ng-enter-active {
-  height:12em;
+  max-height:12em;
 }
